* 1.1.0
    * Added READONLY mode support, scales reads using slave nodes.

* 1.0.0
    * No change to anything just a bump to 1.0.0 because the lib is now considered stable/production ready.

* 0.3.0
    * simple benchmark now uses docopt for cli parsing
    * New make target to run some benchmarks 'make benchmark'
    * simple benchmark now support pipelines tests
    * Renamed RedisCluster --> StrictRedisCluster
    * Implement backwards compatible redis.Redis class in cluster mode. It was named RedisCluster and everyone updating from 0.2.0 to 0.3.0 should consult docs/Upgrading.md for instructions how to change your code.
    * Added comprehensive documentation regarding pipelines
    * Meta retrieval commands(slots, nodes, info) for Redis Cluster. (iandyh)

* 0.2.0
    * Moved pipeline code into new file.
    * Code now uses a proper cluster connection pool class that handles 
      all nodes and connections similar to how redis-py do.
    * Better support for pubsub. All clients will now talk to the same server because 
      pubsub commands do not work reliably if it talks to a random server in the cluster.
    * Better result callbacks and node routing support. No more ugly decorators.
    * Fix keyslot command when using non ascii characters.
    * Add bitpos support, redis-py 2.10.2 or higher required.
    * Fixed a bug where vagrant users could not build the package via shared folder.
    * Better support for CLUSTERDOWN error. (Neuront)
    * Parallel pipeline execution using threads. (72squared)
    * Added vagrant support for testing and development. (72squared)
    * Improve stability of client during resharding operations (72squared)

* 0.1.0
    * Initial release
    * First release uploaded to pypi