@@ -3,6 +3,24 @@
 This document will describe what must be done when upgrading between different versions to ensure that code still works.
 
 
+## 1.0.0 --> Next release
+
+The following exceptions have been changed/added and code that use this client might have to be updated to handle the new classes.
+
+`raise RedisClusterException("Too many Cluster redirections")` have been changed to `raise ClusterError('TTL exhausted.')`
+
+`ClusterDownException` have been replaced with `ClusterDownError`
+
+Added new `AskError` exception class.
+
+Added new `TryAgainError` exception class.
+
+Added new `MovedError` exception class.
+
+Added new `ClusterCrossSlotError` exception class.
+
+
+
 ## 0.2.0 --> 0.3.0
 
 In `0.3.0` release the name of the client class was changed from `RedisCluster` to `StrictRedisCluster` and a new implementation of `RedisCluster` was added that is based on `redis.Redis` class. This was done to enable implementation a cluster enabled version of `redis.Redis` class.
