@@ -4,7 +4,9 @@
 from __future__ import with_statement
 
 # rediscluster imports
-from rediscluster.exceptions import RedisClusterException, ClusterDownException
+from rediscluster.exceptions import (
+    RedisClusterException, ClusterDownError
+)
 from rediscluster.utils import (
     string_keys_to_dict,
     dict_merge,
@@ -62,8 +64,8 @@ def test_first_key():
 def test_clusterdown_wrapper():
     @clusterdown_wrapper
     def bad_func():
-        raise ClusterDownException()
+        raise ClusterDownError("CLUSTERDOWN")
 
-    with pytest.raises(ClusterDownException) as cex:
+    with pytest.raises(ClusterDownError) as cex:
         bad_func()
     assert unicode(cex.value).startswith("CLUSTERDOWN error. Unable to rebuild the cluster")
