@@ -1,4 +1,5 @@
-* 1.1.0
+* Next release
+    * Refactored exception handling and exception classes. 
     * Added READONLY mode support, scales reads using slave nodes.
 
 * 1.0.0
